add post-it view with database and create page

--- a/css/style.css
+++ b/css/style.css
@@ -67,8 +67,9 @@ nav {
 .postit-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: baseline;
+  justify-content: center;
+  gap: 20px;
+  /* align-items: baseline; */
 }
 
 .postit {
