--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ nav {
 }
 
 #home-button {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 .nav-end {
@@ -29,7 +29,7 @@ nav {
 }
 
 #register-button {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
 .container {
@@ -55,13 +55,33 @@ nav {
 }
 
 .button {
-    transition-duration: 0.4s;
+  transition-duration: 0.4s;
 }
 
 .button:hover {
-    color: rgb(79, 79, 255);
-    outline: 2px solid rgb(79, 79, 255);
-    background-color: white;
+  color: rgb(79, 79, 255);
+  outline: 2px solid rgb(79, 79, 255);
+  background-color: white;
+}
+
+.button-secondary {
+  color: rgb(79, 79, 255);
+  outline: 2px solid rgb(79, 79, 255);
+  background-color: white;
+  padding: 15px 32px;
+  text-align: center;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 12px;
+}
+
+.button-secondary {
+  transition-duration: 0.4s;
+}
+
+.button-secondary:hover {
+  background-color: rgb(79, 79, 255);
+  color: white;
 }
 
 .postit-list {
@@ -76,8 +96,8 @@ nav {
   margin-top: 50px;
   width: 330px;
   padding: 15px;
-  background-color: #FFFF99;
-  box-shadow: 4px 5px 2px 0px rgba(0,0,0,0.53)
+  background-color: #ffff99;
+  box-shadow: 4px 5px 2px 0px rgba(0, 0, 0, 0.53);
 }
 
 .postit > * {
@@ -85,10 +105,10 @@ nav {
 }
 
 .postit-header {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 
 .postit-header > h2 {
