--- a/css/style.css
+++ b/css/style.css
@@ -28,13 +28,17 @@ nav {
   justify-content: flex-end;
 }
 
-#register-button {
+#disconnect-button, #register-button {
   margin-left: 10px;
 }
 
 .container {
   width: 70%;
   margin: 0 auto;
+}
+
+h1 {
+  font-size: 4rem;
 }
 
 .center {
