--- a/css/style.css
+++ b/css/style.css
@@ -55,11 +55,12 @@ h1 {
   text-align: center;
   display: inline-block;
   font-size: 16px;
+  border: 0;
   border-radius: 12px;
 }
 
 .button {
-  transition-duration: 0.4s;
+  transition-duration: 0.1s;
 }
 
 .button:hover {
@@ -76,11 +77,12 @@ h1 {
   text-align: center;
   display: inline-block;
   font-size: 16px;
+  border: 0;
   border-radius: 12px;
 }
 
 .button-secondary {
-  transition-duration: 0.4s;
+  transition-duration: 0.1s;
 }
 
 .button-secondary:hover {
@@ -120,4 +122,30 @@ h1 {
   display: flex;
   justify-content: center;
   margin: 0;
+}
+
+input[type=text], input[type=email], input[type=password], textarea {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+}
+
+.form-section {
+  margin-top: 40px;
+  display: flex;
+  justify-content: center;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 50%;
+}
+
+.error-text {
+  color: red;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
 }
