--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ h1 {
   width: 330px;
   padding: 15px;
   background-color: #ffff99;
-  box-shadow: 4px 5px 2px 0px rgba(0, 0, 0, 0.53);
+  box-shadow: 1px 18px 23px -8px rgba(0,0,0,0.38);
 }
 
 .postit > p {
