--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
   text-decoration: none;
 }
 
-ul,
 li {
   list-style-type: none;
 }
@@ -23,7 +22,6 @@ nav {
 
 .nav-end {
   display: flex;
-  flex-direction: row;
   align-items: flex-start;
   justify-content: flex-end;
 }
@@ -103,7 +101,7 @@ h1 {
   width: 330px;
   padding: 15px;
   background-color: #ffff99;
-  box-shadow: 1px 18px 23px -8px rgba(0,0,0,0.38);
+  box-shadow: 1px 18px 23px -8px rgba(0, 0, 0, 0.38);
 }
 
 .postit > p {
@@ -124,7 +122,10 @@ h1 {
   margin: 0;
 }
 
-input[type=text], input[type=email], input[type=password], textarea {
+input[type="text"],
+input[type="email"],
+input[type="password"],
+textarea {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -148,4 +149,15 @@ form {
   font-weight: bold;
   display: flex;
   justify-content: center;
+}
+
+@media screen and (max-width: 767px) {
+  nav {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .nav-end {
+    margin: 20px 0;
+  }
 }
